[gd_scene load_steps=3 format=3 uid="uid://ck6d6rke5lknx"]

[ext_resource type="Theme" uid="uid://b7w5k8j6x2q1a" path="res://resources/ui_theme.tres" id="1"]
[ext_resource type="Script" uid="uid://cg4ikbac8bt18" path="res://scripts/ui/CombatScene.gd" id="2"]

[node name="CombatScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.09803922, 0.09803922, 1)

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MonsterSection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MonsterSprite" type="TextureRect" parent="VBoxContainer/MonsterSection"]
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="MonsterInfo" type="VBoxContainer" parent="VBoxContainer/MonsterSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="MonsterName" type="Label" parent="VBoxContainer/MonsterSection/MonsterInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Monster Name"
horizontal_alignment = 1

[node name="MonsterHealthBar" type="ProgressBar" parent="VBoxContainer/MonsterSection/MonsterInfo"]
layout_mode = 2
size_flags_vertical = 3
value = 100.0
show_percentage = false

[node name="CombatLog" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 2.0
bbcode_enabled = true
text = "[center]Combat begins![/center]"

[node name="PlayerSection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="PlayerInfo" type="VBoxContainer" parent="VBoxContainer/PlayerSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="PlayerName" type="Label" parent="VBoxContainer/PlayerSection/PlayerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Player Name"
horizontal_alignment = 1

[node name="PlayerHealthBar" type="ProgressBar" parent="VBoxContainer/PlayerSection/PlayerInfo"]
layout_mode = 2
size_flags_vertical = 3
value = 100.0
show_percentage = false

[node name="PlayerStats" type="Label" parent="VBoxContainer/PlayerSection/PlayerInfo"]
layout_mode = 2
text = "Level: 1
HP: 100/100
EXP: 0"

[node name="ActionButtons" type="VBoxContainer" parent="VBoxContainer/PlayerSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="AttackButton" type="Button" parent="VBoxContainer/PlayerSection/ActionButtons"]
layout_mode = 2
text = "Attack"

[node name="SkillsButton" type="Button" parent="VBoxContainer/PlayerSection/ActionButtons"]
layout_mode = 2
text = "Skills"

[node name="ItemsButton" type="Button" parent="VBoxContainer/PlayerSection/ActionButtons"]
layout_mode = 2
text = "Items"

[node name="RunButton" type="Button" parent="VBoxContainer/PlayerSection/ActionButtons"]
layout_mode = 2
text = "Run"

[connection signal="pressed" from="VBoxContainer/PlayerSection/ActionButtons/AttackButton" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayerSection/ActionButtons/SkillsButton" to="." method="_on_skills_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayerSection/ActionButtons/ItemsButton" to="." method="_on_items_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayerSection/ActionButtons/RunButton" to="." method="_on_run_pressed"]
